src/App.css
html body {
  background: linear-gradient(to bottom, #373b42, #707f72);
  color: black;
  overflow: hidden;
}
.main {
  height: 100vh;
  width: 100vw;
}
.main-container {
  height: fit-content;
  position: absolute;
}

.main-button {
  transition: 0.3s all ease-in-out;
  position: relative;
  bottom: 7px;
  right: 10px;
}

.main-button:hover {
  color: rgb(19, 163, 46);
  transform: rotate(90deg);
  cursor: pointer;
}

.form-control:focus {
  border-color: rgb(19, 163, 46) !important;
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(19, 163, 46, 0.6) !important;
}

.todo-item {
  margin: 6px;
  padding: 5px;
  border-radius: 10px;
  background-color: #373b4222;
}

.todo-text {
  padding-left: 10px;
  font-size: large;
}

.icon-fix {
  transform: translate(0,-2px);
}

input.check {
  width: 16px;
  height: 16px;
  margin-left: 5px;
}

input[type='checkbox'] {
  accent-color: rgb(124, 216, 82);
}

.main a {
  color: rgb(39, 86, 61);
  font-weight: bold;
  text-decoration: none;
  transition: 0.2s;
}

.main a:hover {
  color: rgb(13, 168, 85);
  text-decoration: underline;
}
svg {
  transition: 0.3s ease;
}
.social-links a svg:hover {
  width: 50px;
  height: 50px;
  transform: translateX(-5px) translateY(-10px);
}

.a-icon svg:hover {
  color: rgb(98, 179, 93);
}

.animation-1 svg {
  position: absolute;
  bottom: 0;
  color:  #707f72;
  animation: moveAndRotate 5s linear infinite;
}

@keyframes moveAndRotate {
  0% {
    transform: translateY(0%) rotate(0); opacity: 0;
  }
  10% {
    opacity: 0;
  }
  15% {
    opacity: 1;
  }
  50% {
    transform: translateY(-400%) rotate(180deg);
  }
  90% {
    opacity: 1;
  }
  100% {
    transform: translateY(-800%) rotate(360deg); opacity: 0;
  }
}

.animation-2 svg {
  position: absolute;
  bottom: 0;
  left: 30%;
  color:  #707f72;
  animation: moveAndRotate2 5s  linear infinite;
}

.animation-3 svg {
  position: absolute;
  bottom: 0;
  right: 30%;
  color:  #707f72;
  animation: moveAndRotate2 6.5s 2s  linear infinite;
}

@keyframes moveAndRotate2 {
  0% {
    transform: translateY(0%) rotate(0); opacity: 0;
  }
  10% {
    opacity: 0;
  }
  15% {
    opacity: 1;
  }
  50% {
    transform: translateY(-400%) rotate(90deg);
  }
  90% {
    opacity: 1;
  }
  100% {
    transform: translateY(-800%) rotate(180deg); opacity: 0;
  }
}


/*~ Small Phone variant <-----------------------------------------------------------------------*/
@media (max-height: 800px) {

  html body {
    background: linear-gradient(to bottom, #373b42, #373b42, #373b42, #707f72);
  }

  @keyframes moveAndRotate {
    0% {
      transform: translateY(0%) rotate(0);
    }
    50% {
      transform: translateY(-75%) rotate(180deg);
    }
    90% {
      opacity: 1;
    }
    100% {
      transform: translateY(-150%) rotate(360deg); opacity: 0.2;
    }
  }

  @keyframes moveAndRotate2 {
    0% {
      transform: translateY(0%) rotate(0);
    }
    50% {
      transform: translateY(-75%) rotate(90deg);
    }
    90% {
      opacity: 1;
    }
    100% {
      transform: translateY(-140%) rotate(180deg); opacity: 0.2;
    }
  }
}

